--- a/SignalRChat/appsettings.json
+++ b/SignalRChat/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "YourSuperSecretKeyHere12345!",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001"
+  }
 }
